--- a/html/thema/css/08.css
+++ b/html/thema/css/08.css
@@ -22,8 +22,8 @@
 .themaWrap .menuWrap::before { content: ''; width: 50%; height: 100%; position: absolute; top: 0; left: 50%; background-color: #ffb7c1; z-index: -1; } 
 .themaWrap .menuWrap::after { content: ''; width: 100%; height: 10px; position: absolute; bottom: 0; background-color: transparent; } 
 .themaWrap .menuWrap .innerSection { position: relative; width: 100%; } 
-.themaWrap .menuWrap .innerSection::before { content: ''; width: 266px; height: 157px; position: absolute; left: -300px; bottom: 10px; background: url(https://chaebonggi.github.io/jobabamain/html/thema/images/20240827/tab_bg01.png) no-repeat; } 
-.themaWrap .menuWrap .innerSection::after { content: ''; width: 139px; height: 148px; position: absolute; right: -160px; bottom: 10px; background: url(https://chaebonggi.github.io/jobabamain/html/thema/images/20240827/tab_bg02.png) no-repeat; } 
+.themaWrap .menuWrap .innerSection::before { content: ''; width: 266px; height: 157px; position: absolute; left: -300px; bottom: 0; background: url(https://chaebonggi.github.io/jobabamain/html/thema/images/20240827/tab_bg01.png) no-repeat; } 
+.themaWrap .menuWrap .innerSection::after { content: ''; width: 139px; height: 148px; position: absolute; right: -160px; bottom: 0; background: url(https://chaebonggi.github.io/jobabamain/html/thema/images/20240827/tab_bg02.png) no-repeat; } 
 .themaWrap .menuWrap .tabMenu { padding-bottom: 10px; position: relative; overflow: hidden; } 
 
 .themaWrap .menuWrap .tabMenu li { width: auto; } 
@@ -118,6 +118,13 @@
 .themaWrap .cont05 .banner .txtWrap span { color: #ff537c; } 
 .themaWrap .cont05 .banner .linkBtn a { background: #ff537c; } 
 
+.themaWrap .tobBtn { position: fixed; right: 20px; bottom: 200px; } 
+.themaWrap .tobBtn a { display: inline-block; width: 70px; height: 70px; background: #fff; color: #a0a0a0; font-size: 14px; border: 1px solid #a0a0a0; box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.12); border-radius: 50%; box-sizing: border-box; text-align: center; } 
+.themaWrap .tobBtn a::before { content: ''; display: block; width: 22px; height: 12px; margin: 15px auto 10px; background: url(https://chaebonggi.github.io/jobabamain/html/thema/images/20240827/arrow_icon.png) no-repeat; }
+
+@media all and (max-width:1700px){
+    .themaWrap .tobBtn {display: none !important;}
+}
 @media all and (max-width:1400px){
  .themaWrap .menuWrap .innerSection::after,
  .themaWrap .menuWrap .innerSection::before { content: none; } 
@@ -137,7 +144,7 @@
  .themaWrap .cont06 .innerSection::before,
  .themaWrap .cont06 .innerSection::after { content: none; } 
  .themaWrap .cont07 .linkList { max-width: 740px; margin: 0 auto; flex-wrap: wrap; justify-content: center; gap: 0 20px; } 
-}
+ }
 
 @media all and (max-width:860px){
  .themaWrap .mainVisual h2 img { max-width: 600px; } 
@@ -160,7 +167,7 @@
 .themaWrap .cont07 .titWrap { width: 600px; height: 276px; margin: 0 auto; background-position: top -18px center; background-size: contain !important; } 
 .themaWrap .cont07 .titWrap p { padding-top: 20px; font-size: 45px; } 
 .themaWrap .cont07 .linkList a { width: 190px; height: 190px; font-size: 18px; } 
-}
+ }
 
 @media all and (max-width:640px){
  .themaWrap .mainVisual .innerSection { padding: 30px 0 30px; } 
@@ -209,7 +216,7 @@
 .themaWrap .cont07 .linkList a { width: 95px; height: 95px; font-size: 12px; } 
 .themaWrap .cont07 .linkList a::before { height: 25px; margin: 20px auto 10px; background-size: contain !important; } 
 .themaWrap .cont07 .innerSection { padding-bottom: 30px; } 
-}
+ }
  @media all and (max-width:480px){
- .themaWrap .contList .jobList li .imgWrap { width: 100%; margin-bottom: 10px; text-align: center;} 
+ .themaWrap .contList .jobList li .imgWrap { width: 100%; margin-bottom: 10px; text-align: center; } 
  }
