--- a/html/thema/css/09.css
+++ b/html/thema/css/09.css
@@ -74,6 +74,7 @@
 .themaWrap .cont01 .itemBox.box03 .list02 li .listBox::before { content: ''; display: block; width: 100%; height: 130px; margin: 0 auto 20px; background: url(https://chaebonggi.github.io/jobabamain/html/thema/images/20240909/box03_img01.png) center no-repeat; background-size: contain !important; } 
 .themaWrap .cont01 .itemBox.box03 .list02 li:nth-child(2) .listBox::before { background: url(https://chaebonggi.github.io/jobabamain/html/thema/images/20240909/box03_img02.png) center no-repeat; } 
 .themaWrap .cont01 .itemBox.box03 .list02 li .listBox p { color: #000; font-size: 18px; text-align: center; } 
+.themaWrap .cont01 .itemBox.box03 .list02 li .listBox .tBox { display: flex; min-height: 72px; align-items: center; justify-content: center; } 
 .themaWrap .cont01 .itemBox.box04 .ckWrap { margin-top: 120px; } 
 .themaWrap .cont01 .itemBox.box04 .ckBox { padding: 30px 20px; } 
 .themaWrap .cont01 .itemBox.box04 .ckBox ul { display: flex; gap: 20px; } 
@@ -92,8 +93,8 @@
 .themaWrap .cont01 .itemBox.box05 .listBox .list03 li p span { color: #ff0000; } 
 .themaWrap .cont01 .itemBox.box05 .listBox .list03 li p::before { content: ''; width: 25px; height: 25px; position: absolute; top: -4px; left: 0; background: url(https://chaebonggi.github.io/jobabamain/html/thema/images/20240909/cont01_ck_icon.png) no-repeat; background-size: contain; } 
 .themaWrap .cont01 .itemBox.box05 .listBox .list03 li + li { margin-top: 16px; } 
-.themaWrap .cont01 .itemBox.box06 .listBox { display: flex; max-width: 1000px; margin: 0 auto; gap: 10px; } 
-.themaWrap .cont01 .itemBox.box06 .item { padding: 100px 0 50px; position: relative; background: #f9f9f9; border-radius: 20px; border: 6px solid #e8ecf3; flex: 1; } 
+.themaWrap .cont01 .itemBox.box06 .listBox { display: flex; max-width: 1000px; margin: 0 auto; gap: 10px; align-items: flex-start;} 
+.themaWrap .cont01 .itemBox.box06 .item {min-height: 480px; padding: 100px 0 50px; position: relative; background: #f9f9f9; border-radius: 20px; border: 6px solid #e8ecf3; flex: 1; } 
 .themaWrap .cont01 .itemBox.box06 .item .title { max-width: 280px; width: 100%; padding: 10px 0; position: absolute; top: -6px; left: 50%; transform: translateX(-50%); background: #4742c3; color: #fff; font-size: 20px; border-radius: 0 0 100px 100px; text-align: center; } 
 .themaWrap .cont01 .itemBox.box06 .item .title span { color: #fff600; } 
 .themaWrap .cont01 .itemBox.box06 .item .txtItem { padding: 0 10px; } 
@@ -105,7 +106,7 @@
 .themaWrap .cont01 .itemBox.box06 .item .txtItem .etcTxt span { color: #ff0000; } 
 .themaWrap .cont01 .itemBox.box06 .item .txtItem .etcTxt em { font-size: 1px; } 
 .themaWrap .cont01 .itemBox.box06 .item .imgItem { margin-top: 20px; padding: 0 10px; text-align: center; } 
-.themaWrap .cont01 .itemBox.box06 .item .imgItem img { max-width: 250px; } 
+.themaWrap .cont01 .itemBox.box06 .item .imgItem img { max-width: 250px; width: 100%;} 
 .themaWrap .cont01 .itemBox.box06 .item .plusIcon { display: block; width: 30px; height: 30px; margin: 10px auto; background: url(https://chaebonggi.github.io/jobabamain/html/thema/images/20240909/box06_icon01.png); background-size: contain; } 
 .themaWrap .cont02 { background: url(https://chaebonggi.github.io/jobabamain/html/thema/images/20240909/cont02_bg.jpg) top center no-repeat; } 
 .themaWrap .cont02 .innerSection { padding: 80px 0; } 
@@ -149,6 +150,7 @@
 .themaWrap .cont01 .itemBox.box04 .ckBox ul { display: block; } 
 .themaWrap .cont01 .itemBox.box04 .ckBox li:nth-child(1) { margin-bottom: 10px; } 
 .themaWrap .cont01 .itemBox.box06 .listBox { display: block; } 
+.themaWrap .cont01 .itemBox.box06 .item {min-height: auto;}
 .themaWrap .cont01 .itemBox.box06 .item + .item { margin-top: 10px; } 
 .themaWrap .cont02 h3 img { max-width: 350px; } 
 .themaWrap .cont02 .linkBtn a { max-width: 500px; height: 90px; } 
@@ -156,33 +158,32 @@
 .themaWrap .cont02 .linkBtn { margin-top: 160px; position: relative; } 
  }
 
-@media all and (max-width:640px){
+@media all and (max-width:640px) {.themaWrap .forMo { display: none !important; } 
  .themaWrap .mainVisual .titWrap { margin-bottom: 20px; } 
  .themaWrap .mainVisual .titWrap h2 img { max-width: 260px; } 
  .themaWrap .mainVisual .mainInfo::before { content: none; } 
 
- .themaWrap .mainVisual .mainInfo .linkBtn a { width: 100%; } 
+ .themaWrap .mainVisual .mainInfo .linkBtn a { width: 80%; height: 40px; font-size: 16px; } 
  .themaWrap .mainVisual .mainInfo { padding: 4px; border-radius: 20px; } 
  .themaWrap .mainVisual .mainInfo .infoBox { padding: 20px 10px; border-radius: 15px; } 
- .themaWrap .mainVisual .mainInfo li .tit { width: 150px; height: 30px; padding-top: 0; margin: 0 auto 10px; font-size: 16px; } 
+ .themaWrap .mainVisual .mainInfo li .tit { width: 150px; height: 30px; margin: 0 auto 10px; font-size: 16px; } 
  .themaWrap .mainVisual .mainInfo li .txtWrap p { font-size: 16px; } 
- .themaWrap .mainVisual .mainInfo li .txtWrap .infoTag { width: 40px; height: 30px; padding-top: 0; margin-right: 6px; } 
+ .themaWrap .mainVisual .mainInfo li .txtWrap .infoTag { width: 40px; height: 30px; margin-right: 6px; } 
  .themaWrap .mainVisual .mainInfo li .txtWrap02 p { font-size: 18px; } 
  .themaWrap .mainVisual .mainInfo li .txtWrap02 .txt { font-size: 14px; } 
  .themaWrap .mainVisual .mainInfo .linkBtn { margin-top: 20px; } 
- .themaWrap .mainVisual .mainInfo .linkBtn a { width: 100%; height: 30px; padding-top: 0; font-size: 16px; } 
  .themaWrap .cont01 .innerSection { padding: 30px 0; } 
 .themaWrap .cont01 .titWrap h3 img { max-width: 150px; } 
 .themaWrap .cont01 .titWrap h3 { margin-bottom: 12px; } 
 .themaWrap .cont01 .titWrap p { margin-bottom: 6px; font-size: 18px; } 
 .themaWrap .cont01 .titWrap span { font-size: 16px; } 
 .themaWrap .cont01 .titWrap span::after { width: 50px; height: 28px; margin-left: 4px; } 
-.themaWrap .cont01 .titWrap { padding-bottom: 20px; background-image: none;} 
+.themaWrap .cont01 .titWrap { padding-bottom: 20px; background-image: none; } 
 .themaWrap .cont01 .titWrap::after { height: 6px; } 
 .themaWrap .cont01 .itemBox::before { width: 40px; height: 40px; left: 16px; top: -30px; font-size: 14px; } 
 .themaWrap .cont01 .itemBox { margin-top: 50px; border-radius: 20px; } 
 .themaWrap .cont01 .itemBox .titBox { padding: 20px 10px; border-radius: 20px 20px 0 0; } 
-.themaWrap .cont01 .itemBox .titBox p { font-size: 18px; } 
+.themaWrap .cont01 .itemBox .titBox p { font-size: 18px; word-break: keep-all; } 
 .themaWrap .cont01 .itemBox .txtBox .txt { margin-bottom: 20px; font-size: 16px; word-break: keep-all; } 
 .themaWrap .cont01 .itemBox .txtBox .txt em { color: #000; font-size: 14px; word-break: keep-all; } 
 .themaWrap .cont01 .itemBox .ckWrap::before { width: 100px; height: 50px; top: -32px; } 
@@ -195,8 +196,8 @@
 .themaWrap .cont01 .itemBox .list01 li::before { width: 12px; height: 12px; } 
 .themaWrap .cont01 .itemBox.box02 .ckBox > div { display: block; } 
 .themaWrap .cont01 .itemBox.box02 .ckBox p { padding: 10px; margin-right: 0; margin-bottom: 10px; font-size: 14px; border-radius: 10px; } 
-.themaWrap .cont01 .itemBox.box02 .ckBox li { padding-left: 6px; font-size: 12px; word-break: keep-all; } 
-.themaWrap .cont01 .itemBox.box02 .ckBox li::before { width: 2px; height: 2px; top: 6px; } 
+.themaWrap .cont01 .itemBox.box02 .ckBox li { padding-left: 0; font-size: 12px; word-break: keep-all; text-align: center; } 
+.themaWrap .cont01 .itemBox.box02 .ckBox li::before { content: '\00B7'; position: static; width: 2px; height: 2px; top: 6px; background: initial; border-radius: initial; } 
 .themaWrap .cont01 .itemBox .list01 { margin: 0 auto 50px; } 
 .themaWrap .cont01 .itemBox.box03 .list02 { display: block; } 
 .themaWrap .cont01 .itemBox.box03 .list02 li::before { width: 35px; height: 35px; top: -50px; } 
@@ -206,15 +207,15 @@
 .themaWrap .cont01 .itemBox.box03 .list02 li .listBox::before { height: 60px; margin: 0 auto 10px; } 
 .themaWrap .cont01 .itemBox.box03 .list02 li .listBox p { font-size: 14px; } 
 .themaWrap .cont01 .itemBox.box04 .ckWrap { margin-top: 60px; } 
-.themaWrap .cont01 .itemBox.box04 .ckBox li .title { width: 130px; height: 30px; margin: 0 auto 10px; padding-top: 0; font-size: 16px; } 
+.themaWrap .cont01 .itemBox.box04 .ckBox li .title { width: 130px; height: 30px; margin: 0 auto 10px; font-size: 16px; } 
 .themaWrap .cont01 .itemBox.box04 .ckBox li p { font-size: 14px; } 
 .themaWrap .cont01 .itemBox.box04 .ckBox li p span::after { width: 14px; height: 14px; top: 0px; } 
 .themaWrap .cont01 .itemBox.box04 .ckBox li p span { padding-right: 18px; } 
 .themaWrap .cont01 .itemBox.box04 .ckBox li p.txt02 { margin-top: 6px; font-size: 12px; } 
 .themaWrap .cont01 .itemBox.box05 .listBox .title { max-width: 90%; padding: 16px 10px; top: -3px; font-size: 16px; border-radius: 0 0 20px 20px; } 
 .themaWrap .cont01 .itemBox.box05 .listBox { padding: 80px 10px 30px; border-radius: 10px; border: 3px solid #e8ecf3; } 
-.themaWrap .cont01 .itemBox.box05 .listBox .list03 li { padding: 10px 5px; border-radius: 10px; } 
-.themaWrap .cont01 .itemBox.box05 .listBox .list03 li p::before { width: 14px; height: 14px; top: -2px; } 
+.themaWrap .cont01 .itemBox.box05 .listBox .list03 li { padding: 10px 10px 6px; border-radius: 10px; } 
+.themaWrap .cont01 .itemBox.box05 .listBox .list03 li p::before { width: 14px; height: 14px; top: 0; } 
 .themaWrap .cont01 .itemBox.box05 .listBox .list03 li p { padding-left: 16px; font-size: 14px; } 
 .themaWrap .cont01 .itemBox.box05 .listBox .list03 li + li { margin-top: 4px; } 
 .themaWrap .cont01 .itemBox.box06 .item .title { width: 90%; padding: 10px 0; top: -3px; font-size: 16px; border-radius: 0 0 20px 20px; } 
@@ -226,10 +227,9 @@
 .themaWrap .cont01 .itemBox.box06 .item .txtItem.lineB { margin-top: 12px; padding-top: 12px; } 
 .themaWrap .cont02 .innerSection { padding: 30px 0; } 
 .themaWrap .cont02 h3 img { max-width: 200px; } 
-.themaWrap .cont02 .linkBtn a { height: 40px; padding-top: 0; font-size: 16px; } 
+.themaWrap .cont02 .linkBtn a { height: 40px; font-size: 16px; } 
 .themaWrap .cont02 .linkBtn a span { padding-right: 26px; } 
 .themaWrap .cont02 .linkBtn a span::after { right: 0; top: 0px; width: 20px; height: 15px; margin-left: 0; background: url(https://chaebonggi.github.io/jobabamain/html/thema/images/20240909/arrow_btn02.png) no-repeat; background-size: contain; } 
 .themaWrap .cont02 .linkBtn::before { width: 140px; height: 61px; top: -61px; } 
 .themaWrap .cont02 .linkBtn { margin-top: 90px; } 
-
 }
